# rustica-engine

./: .clang-format  .gitignore  LICENSE  LICENSE.MulanPSL-2.0  Makefile  README.md  README.zh.md  main.c  meson.build  meson.py  meson_options.txt  pyproject.toml  rustica-engine.control  rustica-wamr.control
.github/workflows/: cd.yml  ci.yml
.workflow/: build.sh  release.yml  upload.sh
patches/: 0001-Add-aot_emit_aot_file.h.patch  0001-Expose-more-functions-related-to-emitting-AOT-files.patch  0002-Allow-loading-of-missing-imports-without-errors-when.patch  0002-Extract-aot_emit_aot_file_buf_ex-and-expose-friends.patch  0002-Fix-missing-stack-frame-alloc-free-in-AOT-multi-modu.patch  0003-Allow-missing-imports-in-wasm-loader-and-report-erro.patch  0003-Remove-the-exposure-of-AOTObjectData.patch  0004-Optimize-for-multi-module-support-in-AOT-mode.patch  0005-Support-circular-calls-when-multi-module-enabled.patch  0006-wamrc-allow-building-without-DUMP_CALL_STACK.patch  0007-HACK-expose-registered_module_list.patch  0007-wasm-loader-Fix-several-issues-in-GC-and-exception-h.patch  0008-further-fixes-over-3586.patch
sql/: rustica-engine--1.0.sql  rustica-wamr--1.0.sql
src/: compiler.c  event_set.c  gucs.c  gucs.h  main.c  main.h  master.c  module.c  rustica_wamr.h  spi.c  worker.c
src/rustica/: bh_log_to_pg.c  compiler.c  compiler.h  datatypes.c  datatypes.h  env.c  env.h  event_set.c  event_set.h  extension.c  gucs.c  gucs.h  main.c  master.c  module.c  module.h  moontest.c  moontest.h  query.c  query.h  spi.c  spi.h  utils.c  utils.h  wamr.c  wamr.h  worker.c
src/rustica/adt/: bytea.c  clock.c  date.c  json.c  jsonb.c  primitives.c  stringbuilder.c  text.c  timestamp.c  uuid.c
subprojects/: .gitignore  llvm.wrap  lz4.wrap  postgresql.wrap  util-linux.wrap  wamr.wrap
subprojects/packagefiles/llvm/: 0003_Add_Meson_Build.patch
subprojects/packagefiles/postgresql/: embed-libs.patch  meson-0.56.patch
subprojects/packagefiles/util-linux/: 3761.patch  uuid_h.patch
subprojects/packagefiles/wamr/: 0001-Support-circular-calls-when-multi-module-enabled.patch  0001-fix-false-OOB-in-array.fill-for-interp.patch  0001.patch  0002-loader-fix-block-loop-ref-params-type-checking.patch  0002-wamrc-allow-building-without-DUMP_CALL_STACK.patch  0002.patch  0003-fix-parameter-handling-in-wasm_loader-with-GC-enable.patch  0003-fix-typo-in-AOT-stack-dump-with-GC.patch  0003.patch  0004-Add-basic-SUPPORT_NUL_IN_STRING.patch  0004-Tweak-submodule-loading-hooks.patch  0004.patch  0005-Support-custom-global-resolver.patch  0005.patch  0006-static-externref.patch  0006.patch
